tests/machine/x/c/two-sum.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

int[] twoSum(int[] nums, int target) {
int n = sizeof(nums)/sizeof(nums[0]);
for (int i = 0; i < n; i++) {
    for (int j = (i + 1); j < n; j++) {
        if (((nums[i] + nums[j]) == target)) {
            return (int[]){i, j};
        }
    }
}
return (int[]){(-1), (-1)};
}


int main() {
int[] result = twoSum((int[]){2, 7, 11, 15}, 9);
printf("%d\n", result[0]);
printf("%d\n", result[1]);
    return 0;
}
